# LakeSoul

./: .gitignore
lakesoul-spark/: pom.xml
lakesoul-spark/src/main/java/org/apache/spark/sql/execution/datasources/parquet/: NativeVectorizedReader.java
lakesoul-spark/src/main/scala/org/apache/spark/sql/execution/datasources/v2/parquet/: NativeFilePartitionReaderFactory.scala  NativeMergeFilePartitionReaderFactory.scala  NativeMergeParquetPartitionReaderFactory.scala  NativeMergeParquetScan.scala  NativeParquetPartitionReaderFactory.scala  NativeParquetScan.scala  RangeParquetScan.scala  (+2 more)
lakesoul-spark/src/main/scala/org/apache/spark/sql/lakesoul/catalog/: LakeSoulScanBuilder.scala
lakesoul-spark/src/main/scala/org/apache/spark/sql/lakesoul/sources/: LakeSoulSQLConf.scala
lakesoul-spark/src/main/scala/org/apache/spark/sql/vectorized/: ArrowUtils.scala
lakesoul-spark/src/test/scala/org/apache/spark/sql/lakesoul/benchmark/io/: MorReadBenchmark.scala  UpsertWriteBenchmark.scala
lakesoul-spark/src/test/scala/org/apache/spark/sql/lakesoul/commands/: UpsertSuiteBase.scala
native-io/lakesoul-io/: Cargo.toml
native-io/lakesoul-io-c/src/: lib.rs
native-io/lakesoul-io-java/: pom.xml
native-io/lakesoul-io-java/src/main/java/org/apache/arrow/lakesoul/io/: ArrowCDataWrapper.java  NativeIOReader.java
native-io/lakesoul-io-java/src/main/java/org/apache/arrow/lakesoul/io/jnr/: LibLakeSoulIO.java
native-io/lakesoul-io-java/src/test/java/test/org/apache/arrow/: DatasetSuite.java
native-io/lakesoul-io/src/: lakesoul_io_config.rs  lakesoul_reader.rs  lib.rs
(+6 files in other folders)
